# claude-code-simple-agent

./: .gitignore  AGENT.md  CLAUDE.md  README.md  REPOSITORIES.md  TABLES.md  TASK-TRACKING.md  config.example.json  persona.md  pyproject.toml
.claude/agents/: architect.md  designer.md  developer.md  diagnose.md  planner.md  release.md  scrum-master.md  tester.md
avatar/: avatar.py  config.example.json  persona.md  requirements.txt  test_avatar.py
bench/: README.md  judge_prompt.md  rubric.md  runner.py
bench/reports/: P-release-v1-release-scrum-v2-2026-04-20.json  P-release-v1-release-scrum-v2-2026-04-20.md  P0-baseline-2026-04-17.json  P0-baseline-2026-04-17.md  P7-scrum-master-2026-04-17.json  P7-scrum-master-2026-04-17.md
docs/plans/: 2026-04-08-digital-avatar-design.md  2026-04-10-tripo-cms-skill-design.md  2026-04-13-avatar-observability-design.md  2026-04-13-avatar-observability-plan.md  2026-04-16-session-resource-eviction-design.md  2026-04-16-session-resource-eviction.md  2026-04-17-identity-driven-agent-paradigm.md  2026-04-17-release-agent-draft.md  2026-04-17-scrum-master-agent-draft.md  2026-04-17-scrum-master-agent-identity-v2.md  2026-04-17-specialist-agent-architecture.md  2026-04-21-designer-agent-draft.md  2026-04-23-multi-session-design.md  2026-04-23-multi-session-plan.md  2026-04-24-auto-advance-design.md  (+1 more)
llmdoc/: index.md
src/: config.py  dashboard.html  defaults_store.py  handler.py  history.html  lark.py  main.py  metrics.py  notify.py  permissions.py  pool.py  router.py  server.py  session.html  session.py  store.py
(+175 files in other folders)
